# flatten-tool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  TESTS.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  run_tests.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: DEBUGGING.md  flatten-tool-overview.md
flatten/: __init__.py  cli.py  config.py  file_handler.py  logging.py  output.py
plugins/: custom_parser.py
src/flatten_tool/flatten/: cli.py  config.py  file_handler.py  logging.py  output.py
src/flatten_tool/templates/: nextjs.json
templates/: nextjs.json
tests/: test_flatten.py
